@@ -111,6 +111,8 @@ List names of all supported hashes, one per line.
 .SH MISCELLANEOUS OPTIONS
 .IP "\-r, \-\-recursive"
 Process directories recursively.
+.IP "\-\-follow"
+Follow symbolic links when processing directories recursively.
 .IP "\-v, \-\-verbose"
 Be verbose.
 .IP "\-\-percents"
